GWT Events  - Event Filter    - add Not Approved events mode    - Awaiting Events, Awaiting My Approval do not include past meetings    - added ability to include (special) events from other sessions (All Sessions toggle)      - outside of the session events are only visible on List of Events and List of Meetings and they cannot be approved, rejected, or edited      - date, time, location, and approval is displayed in gray (like in past events)    - Empty filter was not remembered (refresh did reset the filter back to "My Events")  - Approval   - can approve right corrected (event manager must manage the room to be able to approve / reject)   - List of Events / Meetings no longer allows approve / reject / inquire all (with no selection)  - Event Edit   - new meetings that are going to be approved are marked "new approval"   - deleted meetings are visible, but marked as "deleted meeting"   - fixed a conflicting problem when a new meeting is overlapping with a deleted one   - add event: time & room selection was not properly reset  - merged from dev_events, revision 3116
GWT Events: Print
 - fixed the print in Firefox
   - text on the event boxes was so blurred it was unreadable
   - table headers were printed in weird way (two times on top of each other, but slightly shifted, instead of just bold)
 - merged from dev_events, revision 3110

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -209,6 +209,7 @@ h1 {
 }
 
 .unitime-TableHeader {
+	font-family: sans-serif, verdana, arial;
 	padding-top: 5px;
 	font-weight: bold;
 	color: #666666;
@@ -784,6 +785,9 @@ h1 {
 	.unitime-TimeGrid .meeting {
 		color: #000000;
 		background-color: #FFFFFF;
+		filter: alpha(opacity = 100);
+		opacity: 1.00;
+		-moz-opacity: 1.00;
 	}
 	.unitime-TimeGrid .meeting .header {
 		padding-bottom: 0px;
@@ -1146,6 +1150,7 @@ h1 {
 }
 
 .unitime-ClickableTableHeader {
+	font-family: sans-serif, verdana, arial;
 	padding-top: 5px;
 	font-weight: bold;
 	color: #666666;
@@ -1155,6 +1160,7 @@ h1 {
 }
 
 .unitime-ClickableTableHeaderNoBorderLine {
+	font-family: sans-serif, verdana, arial;
 	padding-top: 5px;
 	font-weight: bold;
 	color: #666666;
@@ -2153,10 +2159,25 @@ div.gwt-MenuBarPopup {
 	color: blue;
 }
 
+.unitime-EventMeetings .new-approved-meeting {
+	font-style: italic;
+	color: green;
+}
+
 .unitime-EventMeetings .conflict-row {
 	font-style: italic;
 	background-color: #FFD7D7;
 	vertical-align: top;
+}
+
+.unitime-EventMeetings .deleted-row {
+	font-style: italic;
+	color: gray;
+}
+
+.unitime-EventMeetings .deleted-meeting {
+	font-style: italic;
+	color: gray;
 }
 
 .unitime-EventMeetings .indent {
